2017-09-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Enhanced simplification of expressions with polynomial division
	* Data with invalid values are plotted as discontinuous function

2017-09-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix thread not terminated on Calculator deletion (issue #45)

2017-09-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix 5/(x−y)−3/(2x−2y)=7(2x-2y)
	* Factorization fixes
	* sqrt(-a)=sqrt(a)*i

2017-09-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix convert cbrt(L) to optimal unit
	* Fix automatic prefixes for negative numbers

2017-09-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix ^4 and ^5 unicode signs
	* Fix for sqrt(a)=b*sqrt(c)
	* Calculate all complex roots for x^a=b
	* arg() enhancements

2017-09-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Comparison functions for date class

2017-09-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Version check function

2017-09-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Additional exchange rates source (mycurrency.net with over 100 additional currencies)
	* Enhanced equation solving

2017-09-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* abs() and sgn() enhancements

2017-09-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* cbrt() and root() now always returns real root

2017-08-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix solving of (a+x)/(b+x)=c

2017-08-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Duplicate the RPN register at the top, instead of pushing zeroes, on RPN enter with empty expression (fixes qalculate-gtk issue #22)
	* Implementation of all R algorithms in percentile function
	* Use a formula for exponentiation with a complex power that preserves precision better

2017-08-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix inconsistent parsing - x^22x=x^22*x, x^2x=x^(2*x) (now x^2x=x^2*x)
	* Do not round exact integers in EXP_NONE/"Simple" mode (its only annoying)
